# OrangeGuidanceTomestone

client/: Commands.cs  Configuration.cs  HousingLocationExt.cs  Message.cs  MessageRequest.cs  Messages.cs  OrangeGuidanceTomestone.csproj  OrangeGuidanceTomestone.yaml  Pack.cs  Pinger.cs  Plugin.cs  PluginUi.cs  Template.cs  Vfx.cs  elden-ring.yaml  packages.lock.json
client/Helpers/: ImGuiHelper.cs  ServerHelper.cs
client/MiniPenumbra/: MiniFunctions.cs  SeFileDescriptor.cs  VfxReplacer.cs
client/Resources/: zh.json
client/Ui/: ImGuiExt.cs  MainWindow.cs  Viewer.cs  ViewerButton.cs
client/Ui/MainWindowTabs/: ITab.cs  MessageList.cs  Settings.cs  Write.cs
client/Util/: ActorManager.cs  HousingLocation.cs  SemaphoreExt.cs
client/vfx/: sign_h.avfx
server/: .gitignore  Cargo.toml  rust-toolchain.toml
server/migrations/: 10_housing_changes.sql  11_more_housing_changes.sql  12_even_more_housing_changes.sql  13_allow_multi_use_tokens.sql  14_add_code_tracking_table.sql  15_add_code_tracking_primary_key.sql  16_fix_tracking_table.sql  17_add_emotes.sql  18_add_shadowbans.sql  19_add_recommended_index.sql  1_setup.sql  2_add_yaw.sql  3_add_extra.sql  4_add_extra_tokens.sql  5_add_votes_message_idx.sql  6_add_glyph.sql  7_fix_glyph.sql  8_add_last_seen.sql  9_fix_user_col.sql
server/packs/: bloodborne.yaml  dark-souls-2.yaml  dark-souls-3.yaml  dark-souls.yaml  demons-souls-remake.yaml  demons-souls.yaml  elden-ring.yaml  ffxiv.yaml  ffxiv_old.yaml  ffxiv_old2.yaml  ffxiv_old3.yaml  ffxiv_old4.yaml  ffxiv_old5.yaml  pack.schema.json  sekiro.yaml
server/src/: config.rs  consts.rs  main.rs  message.rs  pack.rs  task.rs  util.rs  web.rs
server/src/task/: delete_old.rs
server/src/web/: claim.rs  erase.rs  get_location.rs  get_message.rs  get_mine.rs  packs.rs  ping.rs  register.rs  unregister.rs  vote.rs  write.rs
